--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,20 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
        <div class="container-fluid">
          <a class="navbar-brand" href="<%= posts_path %>">Blog On Rails</a>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-             <li class="nav-item">
-               <a class="nav-link"  href="<%= posts_path %>">Home</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="<%= new_post_path %>">New Post</a>
-             </li>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+              <li class="nav-item">
+                <a class="nav-link"  href="<%= posts_path %>">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="<%= new_post_path %>">New Post</a>
+              </li>
            </ul>
          </div>
        </div>
      </nav>
+
+    <%= flash[:notice] || flash[:alert] %>
     <%= yield %>
   </body>
 </html>
