--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,4 +7,23 @@
     <%= link_to "Edit", edit_post_path(@post)%>
     <%= button_to "Delete", post_path(@post), method: :delete%>
 </div>
-   
+<br>   
+<h3>Comment</h3>
+
+
+<div>
+    <%= form_with(model: [@post, @comment]) do |f|%>
+        <%= f.text_area :body, placeholder:"What's on your mind?", class:"form-control", rows:3, cols:20%>
+        <%= f.submit 'Submit'%>
+    <% end %>
+</div>
+<br>
+<div>
+    <% @comments.each do |comment|%>
+        <%= comment.body%>
+        <br>
+        <small>Commented <%= time_ago_in_words(comment.created_at) %> ago |</small>
+        <%= button_to "Delete",post_comment_path(@post, comment), method: :delete%>
+    <% end %>
+</div>
+
