--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,25 @@
               <li class="nav-item">
                 <a class="nav-link" href="<%= new_post_path %>">New Post</a>
               </li>
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  <a class="nav-link disabled">Hello <%= link_to current_user.full_name, edit_user_path(current_user) %> </a>
+                </li>
+                <li class="nav-item">
+                <div><%= button_to "Log out", session_path, method: :delete, class: "btn btn-danger" %></div>
+                </li>
+                <% else %>
+                  <li class="nav-item">
+                    <div class="nav-link">
+                      <a class="btn btn-primary btn-sm" href="<%= new_session_path %>">Sign In</a>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <div class="nav-link">
+                      <a class="btn btn-primary btn-sm" href="<%= new_user_path %>">Sign Up</a>
+                    </div>
+                  </li>
+                <% end %>
            </ul>
          </div>
        </div>
